Found the version of bootstrap that works with the modal popups. Fixed some CSS preventing wrapping, added bootstrap node_module to project

--- a/angular/personal-portfolio/src/styles.css
+++ b/angular/personal-portfolio/src/styles.css
@@ -675,7 +675,7 @@ progress {
   margin-right: calc(-0.5 * var(--bs-gutter-x));
   margin-left: calc(-0.5 * var(--bs-gutter-x));
 }
-.row > * {
+.row > * > div {
   flex-shrink: 0;
   width: 100%;
   max-width: 100%;
